--- a/app/src/main/res/layout/activity_driver.xml
+++ b/app/src/main/res/layout/activity_driver.xml
@@ -232,7 +232,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/ress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#43FFFFFF"
