--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -81,11 +81,12 @@
         android:id="@+id/vehicle_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="228dp"
+        android:layout_marginLeft="228dp"
+        android:layout_marginTop="20dp"
         android:text="Vehicle type"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vehicle_Number" />
+        app:layout_constraintTop_toBottomOf="@+id/enter_vehicle_number" />
 
     <TextView
         android:id="@+id/vehicle_Number"
@@ -207,19 +208,19 @@
 
 
     <TextView
-        android:id="@+id/textView21"
+        android:id="@+id/vehicle_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="118dp"
-        android:background="#43FFFFFF"
         android:layout_marginTop="8dp"
+        android:background="#43FFFFFF"
         android:text="upload the photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.104"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/vehicle_type"
         app:layout_constraintTop_toBottomOf="@+id/enter_vehicle_number"
-        app:layout_constraintVertical_bias="0.086"
+        app:layout_constraintVertical_bias="0.047"
         tools:ignore="MissingConstraints" />
 
     <TextView
